mutants.out.old/log/src__proto__client__ent.rs_line_38_col_9_004.log

*** src/proto/client/ent.rs:38:9: replace Client<S>::open_batch -> Result<Option<BatchHandle<'_, S>>, Error> with Ok(Some(BatchHandle::from(Default::default())))

*** mutation diff:
--- src/proto/client/ent.rs
+++ replace Client<S>::open_batch -> Result<Option<BatchHandle<'_, S>>, Error> with Ok(Some(BatchHandle::from(Default::default())))
@@ -30,18 +30,17 @@
         Ok(BatchHandle::new(bid, self))
     }
 
     /// Open an already existing batch of jobs.
     ///
     /// This will not error if a batch with the provided `bid` does not exist,
     /// rather `Ok(None)` will be returned.
     pub async fn open_batch(&mut self, bid: BatchId) -> Result<Option<BatchHandle<'_, S>>, Error> {
-        let bid = self.issue(&OpenBatch::from(bid)).await?.maybe_bid().await?;
-        Ok(bid.map(|bid| BatchHandle::new(bid, self)))
+        Ok(Some(BatchHandle::from(Default::default()))) /* ~ changed by cargo-mutants ~ */
     }
 
     pub(crate) async fn commit_batch(&mut self, bid: BatchId) -> Result<(), Error> {
         self.issue(&CommitBatch::from(bid)).await?.read_ok().await
     }
 }
 
 impl<'a, S: AsyncBufReadExt + AsyncWriteExt + Unpin + Send> ReadToken<'a, S> {


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-jIMFg4.tmp/Cargo.toml --all-features
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-jIMFg4.tmp)
error[E0277]: the trait bound `BatchHandle<'_, S>: Default` is not satisfied
  --> src/proto/client/ent.rs:38:35
   |
38 |         Ok(Some(BatchHandle::from(Default::default()))) /* ~ changed by cargo-mutants ~ */
   |                                   ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `BatchHandle<'_, S>`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
